--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -7,6 +7,9 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>My first web page</h1>
+  <h2>Written witht the guidance of Epicodus</h2>
+  
   <p>This is my first web page!</p>
   <p>Isn't it nice</p>
 </body>
